--- a/MessageSender/Properties/launchSettings.json
+++ b/MessageSender/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "MessageSender": {
       "commandName": "Project",
       "environmentVariables": {
-        "EHConnectionString": "Endpoint=sb://iomegaehnamepsace.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=+r0VPduwbp3oSHdbgUn8Zf6Z1sgEj1OHpwkki/yPFow=",
-        "EHPath": "sensormessages"
+        "EHConnectionString": "Endpoint=sb://iomegaeventhubs.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=ExSlrHKlwZMTYm0+YqZJlYsAoAbQauGGd/RFdPGWAcg=",
+        "EHPath": "sensorreadings"
       }
     }
   }
